docs/2.0.1/_sources/api/gwpy.timeseries.TimeSeries.rst.txt


TimeSeries
==========================

.. currentmodule:: gwpy.timeseries

.. autoclass:: TimeSeries
   :no-inherited-members:

   
     None
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~TimeSeries.T
      ~TimeSeries.base
      ~TimeSeries.cgs
      ~TimeSeries.channel
      ~TimeSeries.ctypes
      ~TimeSeries.data
      ~TimeSeries.dt
      ~TimeSeries.dtype
      ~TimeSeries.duration
      ~TimeSeries.dx
      ~TimeSeries.epoch
      ~TimeSeries.equivalencies
      ~TimeSeries.flags
      ~TimeSeries.flat
      ~TimeSeries.imag
      ~TimeSeries.info
      ~TimeSeries.isscalar
      ~TimeSeries.itemsize
      ~TimeSeries.name
      ~TimeSeries.nbytes
      ~TimeSeries.ndim
      ~TimeSeries.real
      ~TimeSeries.sample_rate
      ~TimeSeries.shape
      ~TimeSeries.si
      ~TimeSeries.size
      ~TimeSeries.span
      ~TimeSeries.strides
      ~TimeSeries.t0
      ~TimeSeries.times
      ~TimeSeries.unit
      ~TimeSeries.value
      ~TimeSeries.x0
      ~TimeSeries.xindex
      ~TimeSeries.xspan
      ~TimeSeries.xunit

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~TimeSeries.abs
      ~TimeSeries.all
      ~TimeSeries.any
      ~TimeSeries.append
      ~TimeSeries.argmax
      ~TimeSeries.argmin
      ~TimeSeries.argpartition
      ~TimeSeries.argsort
      ~TimeSeries.asd
      ~TimeSeries.astype
      ~TimeSeries.auto_coherence
      ~TimeSeries.average_fft
      ~TimeSeries.bandpass
      ~TimeSeries.byteswap
      ~TimeSeries.choose
      ~TimeSeries.clip
      ~TimeSeries.coherence
      ~TimeSeries.coherence_spectrogram
      ~TimeSeries.compress
      ~TimeSeries.conj
      ~TimeSeries.conjugate
      ~TimeSeries.convolve
      ~TimeSeries.copy
      ~TimeSeries.correlate
      ~TimeSeries.crop
      ~TimeSeries.csd
      ~TimeSeries.csd_spectrogram
      ~TimeSeries.cumprod
      ~TimeSeries.cumsum
      ~TimeSeries.decompose
      ~TimeSeries.demodulate
      ~TimeSeries.detrend
      ~TimeSeries.diagonal
      ~TimeSeries.diff
      ~TimeSeries.dot
      ~TimeSeries.dump
      ~TimeSeries.dumps
      ~TimeSeries.ediff1d
      ~TimeSeries.fetch
      ~TimeSeries.fetch_open_data
      ~TimeSeries.fft
      ~TimeSeries.fftgram
      ~TimeSeries.fill
      ~TimeSeries.filter
      ~TimeSeries.find
      ~TimeSeries.flatten
      ~TimeSeries.from_lal
      ~TimeSeries.from_nds2_buffer
      ~TimeSeries.from_pycbc
      ~TimeSeries.gate
      ~TimeSeries.get
      ~TimeSeries.getfield
      ~TimeSeries.heterodyne
      ~TimeSeries.highpass
      ~TimeSeries.inject
      ~TimeSeries.insert
      ~TimeSeries.is_compatible
      ~TimeSeries.is_contiguous
      ~TimeSeries.item
      ~TimeSeries.itemset
      ~TimeSeries.lowpass
      ~TimeSeries.mask
      ~TimeSeries.max
      ~TimeSeries.mean
      ~TimeSeries.median
      ~TimeSeries.min
      ~TimeSeries.nansum
      ~TimeSeries.newbyteorder
      ~TimeSeries.nonzero
      ~TimeSeries.notch
      ~TimeSeries.override_unit
      ~TimeSeries.pad
      ~TimeSeries.partition
      ~TimeSeries.plot
      ~TimeSeries.prepend
      ~TimeSeries.prod
      ~TimeSeries.psd
      ~TimeSeries.ptp
      ~TimeSeries.put
      ~TimeSeries.q_gram
      ~TimeSeries.q_transform
      ~TimeSeries.ravel
      ~TimeSeries.rayleigh_spectrogram
      ~TimeSeries.rayleigh_spectrum
      ~TimeSeries.read
      ~TimeSeries.repeat
      ~TimeSeries.resample
      ~TimeSeries.reshape
      ~TimeSeries.resize
      ~TimeSeries.rms
      ~TimeSeries.round
      ~TimeSeries.searchsorted
      ~TimeSeries.setfield
      ~TimeSeries.setflags
      ~TimeSeries.shift
      ~TimeSeries.sort
      ~TimeSeries.spectral_variance
      ~TimeSeries.spectrogram
      ~TimeSeries.spectrogram2
      ~TimeSeries.squeeze
      ~TimeSeries.std
      ~TimeSeries.step
      ~TimeSeries.sum
      ~TimeSeries.swapaxes
      ~TimeSeries.take
      ~TimeSeries.taper
      ~TimeSeries.to
      ~TimeSeries.to_lal
      ~TimeSeries.to_pycbc
      ~TimeSeries.to_string
      ~TimeSeries.to_value
      ~TimeSeries.tobytes
      ~TimeSeries.tofile
      ~TimeSeries.tolist
      ~TimeSeries.tostring
      ~TimeSeries.trace
      ~TimeSeries.transpose
      ~TimeSeries.update
      ~TimeSeries.value_at
      ~TimeSeries.var
      ~TimeSeries.view
      ~TimeSeries.whiten
      ~TimeSeries.write
      ~TimeSeries.zip
      ~TimeSeries.zpk

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: T
   .. autoattribute:: base
   .. autoattribute:: cgs
   .. autoattribute:: channel
   .. autoattribute:: ctypes
   .. autoattribute:: data
   .. autoattribute:: dt
   .. autoattribute:: dtype
   .. autoattribute:: duration
   .. autoattribute:: dx
   .. autoattribute:: epoch
   .. autoattribute:: equivalencies
   .. autoattribute:: flags
   .. autoattribute:: flat
   .. autoattribute:: imag
   .. autoattribute:: info
   .. autoattribute:: isscalar
   .. autoattribute:: itemsize
   .. autoattribute:: name
   .. autoattribute:: nbytes
   .. autoattribute:: ndim
   .. autoattribute:: real
   .. autoattribute:: sample_rate
   .. autoattribute:: shape
   .. autoattribute:: si
   .. autoattribute:: size
   .. autoattribute:: span
   .. autoattribute:: strides
   .. autoattribute:: t0
   .. autoattribute:: times
   .. autoattribute:: unit
   .. autoattribute:: value
   .. autoattribute:: x0
   .. autoattribute:: xindex
   .. autoattribute:: xspan
   .. autoattribute:: xunit

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: abs
   .. automethod:: all
   .. automethod:: any
   .. automethod:: append
   .. automethod:: argmax
   .. automethod:: argmin
   .. automethod:: argpartition
   .. automethod:: argsort
   .. automethod:: asd
   .. automethod:: astype
   .. automethod:: auto_coherence
   .. automethod:: average_fft
   .. automethod:: bandpass
   .. automethod:: byteswap
   .. automethod:: choose
   .. automethod:: clip
   .. automethod:: coherence
   .. automethod:: coherence_spectrogram
   .. automethod:: compress
   .. automethod:: conj
   .. automethod:: conjugate
   .. automethod:: convolve
   .. automethod:: copy
   .. automethod:: correlate
   .. automethod:: crop
   .. automethod:: csd
   .. automethod:: csd_spectrogram
   .. automethod:: cumprod
   .. automethod:: cumsum
   .. automethod:: decompose
   .. automethod:: demodulate
   .. automethod:: detrend
   .. automethod:: diagonal
   .. automethod:: diff
   .. automethod:: dot
   .. automethod:: dump
   .. automethod:: dumps
   .. automethod:: ediff1d
   .. automethod:: fetch
   .. automethod:: fetch_open_data
   .. automethod:: fft
   .. automethod:: fftgram
   .. automethod:: fill
   .. automethod:: filter
   .. automethod:: find
   .. automethod:: flatten
   .. automethod:: from_lal
   .. automethod:: from_nds2_buffer
   .. automethod:: from_pycbc
   .. automethod:: gate
   .. automethod:: get
   .. automethod:: getfield
   .. automethod:: heterodyne
   .. automethod:: highpass
   .. automethod:: inject
   .. automethod:: insert
   .. automethod:: is_compatible
   .. automethod:: is_contiguous
   .. automethod:: item
   .. automethod:: itemset
   .. automethod:: lowpass
   .. automethod:: mask
   .. automethod:: max
   .. automethod:: mean
   .. automethod:: median
   .. automethod:: min
   .. automethod:: nansum
   .. automethod:: newbyteorder
   .. automethod:: nonzero
   .. automethod:: notch
   .. automethod:: override_unit
   .. automethod:: pad
   .. automethod:: partition
   .. automethod:: plot
   .. automethod:: prepend
   .. automethod:: prod
   .. automethod:: psd
   .. automethod:: ptp
   .. automethod:: put
   .. automethod:: q_gram
   .. automethod:: q_transform
   .. automethod:: ravel
   .. automethod:: rayleigh_spectrogram
   .. automethod:: rayleigh_spectrum
   .. automethod:: read
   .. automethod:: repeat
   .. automethod:: resample
   .. automethod:: reshape
   .. automethod:: resize
   .. automethod:: rms
   .. automethod:: round
   .. automethod:: searchsorted
   .. automethod:: setfield
   .. automethod:: setflags
   .. automethod:: shift
   .. automethod:: sort
   .. automethod:: spectral_variance
   .. automethod:: spectrogram
   .. automethod:: spectrogram2
   .. automethod:: squeeze
   .. automethod:: std
   .. automethod:: step
   .. automethod:: sum
   .. automethod:: swapaxes
   .. automethod:: take
   .. automethod:: taper
   .. automethod:: to
   .. automethod:: to_lal
   .. automethod:: to_pycbc
   .. automethod:: to_string
   .. automethod:: to_value
   .. automethod:: tobytes
   .. automethod:: tofile
   .. automethod:: tolist
   .. automethod:: tostring
   .. automethod:: trace
   .. automethod:: transpose
   .. automethod:: update
   .. automethod:: value_at
   .. automethod:: var
   .. automethod:: view
   .. automethod:: whiten
   .. automethod:: write
   .. automethod:: zip
   .. automethod:: zpk

   
   